--- a/src/assets/scss/common/contacts.scss
+++ b/src/assets/scss/common/contacts.scss
@@ -35,3 +35,16 @@
     }
   }
 }
+
+@media screen and (max-width: $tableWidth) {
+  .contacts {
+    .contacts__container {
+      flex-wrap: wrap;
+      .contacts__info-wrapper {
+        max-width: none;
+        width: 100%;
+        padding-bottom: 32px;
+      }
+    }
+  }
+}
