--- a/src/assets/scss/common/footer.scss
+++ b/src/assets/scss/common/footer.scss
@@ -8,3 +8,9 @@
     }
   }
 }
+
+@media screen and (max-width: $tableWidth) {
+  .footer {
+    padding: 30px 0;
+  }
+}
