--- a/src/assets/scss/common/header.scss
+++ b/src/assets/scss/common/header.scss
@@ -68,24 +68,23 @@
   .header {
     .header__container {
       position: absolute;
-      display: flex;
+      display: none;
       flex-direction: column;
       width: 100%;
       height: 100vh;
-      padding: 20px 32px 32px 32px;
+      padding: 18px 32px 32px 32px;
       top: 0;
       z-index: 10000;
       background-color: $default-color;
       border: none;
-      transform: translateX(-100%);
-      transition: transform .150s linear;
+      transform: translateX(100%);
+      transition: transform .5s ease-in-out;
       .header__logo-text {
         width: 100%;
         display: flex;
-        height: 65px;
         justify-content: space-between;
         align-items: center;
-        padding: 0 0 10px 0;
+        padding: 0 0 29px 0;
         .header__close {
           display: flex;
           cursor: pointer;
@@ -126,8 +125,9 @@
     }
 
     .header__container--open {
+      display: flex;
       transform: translateX(0);
-      transition: transform .150s linear;
+      transition: transform .5s ease-in-out;
     }
 
     .header__container--adaptive {
@@ -153,6 +153,18 @@
         justify-content: space-between;
         padding: 18px 18px 18px 0;
       }
+    }
+  }
+}
+
+@media screen and (max-width: $tableWidth) {
+  .header {
+    .header__container {
+      padding: 20px 16px 16px 16px;
+    }
+
+    .header__container--adaptive {
+      padding: 0 16px;
     }
   }
 }
