--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -76,6 +76,9 @@ li {
   margin: 0 auto;
   max-width: 1304px;
   padding: 0 32px;
+  @media screen and (max-width: $tableWidth) {
+    padding: 0 16px;
+  }
 }
 
 .wrapper {
